# expenses-tracker

./: .gitignore  .python-version  Dockerfile  README.md  create_session.py  docker-compose.yaml  example-env.tst  nixpacks.toml  pyproject.toml  requirements.txt  run_whatsapp_bot.py
backend_py/: QUICK_DEPLOY.md  README.md  __init__.py  env.example  main.py  requirements.txt  run.py
backend_py/auth/: firebase_auth.py  supabase_auth.py
backend_py/chatbot/: __init__.py  config.py  intent_detector.py  query_executor.py  query_generator.py  response_formatter.py  security.py  service.py
backend_py/config/: categories.py  transcription.py
backend_py/database/: base_service.py  neon_client.py  supabase_client.py
backend_py/db/schemas/: README.md  audit_log.sql  budgets.sql  categories.sql  currencies.sql  exchange_rates.sql  index.sql  migrate_to_supabase_users.sql  schema.sql  simple_rls_fix.sql  transaction_attachments.sql  transactions.sql  triggers.sql  update_categories.sql  user_income.sql  user_profiles.sql  users.sql
backend_py/models/: budget.py  expense.py  user.py
backend_py/routers/: budget.py  chatbot.py  whatsapp.py
backend_py/services/: budget_service.py  category_service.py  expense_service.py  fixed_expense_service.py  llm_service.py  scheduler_service.py  sheets_service.py  truelayer_service.py  user_service.py  voice_session_store.py  whatsapp_service.py
backend_py/utils/: audio_preprocessor.py  audio_transcription.py  llm_classifier.py  transcription_normalizer.py
database/: README.md  add_user_income_table.sql  check_db.py  init_db.py  migrate_schema.py  schema.sql  validate_and_migrate_schema.sql
frontend/: env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  SimpleApp.tsx  TestApp.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: Alert.tsx  Button.tsx  Card.tsx  ErrorBoundary.tsx  FormField.tsx  Input.tsx  Layout.tsx  LoadingSpinner.tsx  Select.tsx  ThemeToggle.tsx  index.ts
frontend/src/config/: categories.ts
src/expenses_bot/: backend.py  backend_.py  bot.py  config.py  fixed_expenses.py  llm.py  sheets.py  transcription.py
tests/: test_llm.py  test_sheets.py
(+61 files in other folders)
