[project]
name = "expenses-tracker"
version = "0.1.0"
description = ""

readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "python-telegram-bot (>=22.1,<23.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "google-api-python-client (>=2.169.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "agno (>=1.5.1,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "google-genai (>=1.15.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "expenses_bot", from = "src"}]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
commitizen = "^4.7.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"